REGRESSION (r125239): classList contains() doesn't work after element was moved from strict mode document to quirks mode document https://bugs.webkit.org/show_bug.cgi?id=101627

Reviewed by Alexey Proskuryakov.

We used to only create m_classNamesForQuirksMode in the constructor or when the class attribute
was changed. If an element is moved from a standards document to a quirks mode document the
m_classNamesForQuirksMode would not be up to date which lead to wrong results.

Now we alway check if m_classNamesForQuirksMode is up to date (in quirks mode only).

Source/WebCore:

Test: fast/dom/Element/class-list-move-between-document-with-different-quirks-mode.html

* html/ClassList.cpp:
(WebCore::ClassList::classNames): Create the m_classNamesForQuirksMode lazily as needed so that
                                  it is up to date.
* html/ClassList.h:

LayoutTests:

* fast/dom/Element/class-list-move-between-document-with-different-quirks-mode-expected.txt: Added.
* fast/dom/Element/class-list-move-between-document-with-different-quirks-mode.html: Added.


Canonical link: https://commits.webkit.org/119884@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134102 268f45cc-cd09-0410-ab3c-d52691b4dbfc